aspecto y anexo de examenes

--- a/html/listado-medicos.html
+++ b/html/listado-medicos.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listado medicos</title>
     <link rel="stylesheet" href="../styles/style.css">
+    
 </head>
 <body>
     <header>
-        <h1>Centro medico Backend</h1>
+        <h1>Centro Medico Universitario Distrital "CMUD"<h1>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Bogot%C3%A1_edificio_Hospital_San_Jos%C3%A9_en_la_plaza_Espa%C3%B1a.JPG/320px-Bogot%C3%A1_edificio_Hospital_San_Jos%C3%A9_en_la_plaza_Espa%C3%B1a.JPG" width="600px" height="200px">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Bogot%C3%A1_edificio_Hospital_San_Jos%C3%A9_en_la_plaza_Espa%C3%B1a.JPG/320px-Bogot%C3%A1_edificio_Hospital_San_Jos%C3%A9_en_la_plaza_Espa%C3%B1a.JPG" width="600px" height="200px">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Bogot%C3%A1_edificio_Hospital_San_Jos%C3%A9_en_la_plaza_Espa%C3%B1a.JPG/320px-Bogot%C3%A1_edificio_Hospital_San_Jos%C3%A9_en_la_plaza_Espa%C3%B1a.JPG" width="600px" height="200px">
     </header>
     <main>
         <h2>Listado medicos</h2>
@@ -42,6 +46,16 @@
         <a href="../index.html"><input type="button" value="Volver"></a>
     </main>
     <footer>
+        <img src="https://static.vecteezy.com/system/resources/previews/002/092/224/non_2x/health-care-symbol-two-snakes-and-a-rod-on-a-red-background-logo-for-the-pharmacy-flat-illustration-vector.jpg" width="10%">
+            <h2>Contactos:</h2>
+            <ul>
+                <li>Urgencias: 601 424620</li>
+                <li>Telefono: 601 2930822</li>
+                <li>Telefono Nacional: 01 8000 2200</li>
+                <li>Correo electronico: centroMedicoUniversitarioDistrital@cmud.com.co </li>
+                <li>Sede principal: Calle28 #5-26</li>
+                <li>Violencia sexual: +57 306 765 4334</li>
+            </ul>
         <h2>Realizado por:</h2>
         <p>Grupo 1 desarrollo web backend</p>
     </footer>
