--- a/index.html
+++ b/index.html
@@ -3,25 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Centro Medico Backend</title>
+    <title>Centro Medico Universidad Publica</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div class="fondo">
         <header>
-            <h1>Centro medico Backend</h1>
+            <h1>Centro Medico Universitario Distrital "CMUD"<h1>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Bogot%C3%A1_edificio_Hospital_San_Jos%C3%A9_en_la_plaza_Espa%C3%B1a.JPG/320px-Bogot%C3%A1_edificio_Hospital_San_Jos%C3%A9_en_la_plaza_Espa%C3%B1a.JPG" width="600px" height="200px">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Bogot%C3%A1_edificio_Hospital_San_Jos%C3%A9_en_la_plaza_Espa%C3%B1a.JPG/320px-Bogot%C3%A1_edificio_Hospital_San_Jos%C3%A9_en_la_plaza_Espa%C3%B1a.JPG" width="600px" height="200px">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Bogot%C3%A1_edificio_Hospital_San_Jos%C3%A9_en_la_plaza_Espa%C3%B1a.JPG/320px-Bogot%C3%A1_edificio_Hospital_San_Jos%C3%A9_en_la_plaza_Espa%C3%B1a.JPG" width="600px" height="200px">
+            <p><i>Trabajamos para cuidar su vida y la de toda su familia.</i></p>
+        
         </header>
         <main class="listado-container">
             <ul class="listado-servicios">
-                <li><a href="html/registro-medicos.html">Registro medicos</a></li>
-                <li><a href="html/registro-pacientes.html">Registro pacientes</a></li>
-                <li><a href="html/listado-medicos.html">Listado medicos</a></li>
-                <li><a href="html/listado-pacientes.html">Listado pacientes</a></li>
+                <li><a href="html/registro-medicos.html"><b>Registro medicos: </b></a></li><br>
+                <li><a href="html/registro-pacientes.html"><b>Registro pacientes</b></a></li><br>
+                <li><a href="html/listado-medicos.html"><b>Listado medicos</b></a></li><br>
+                <li><a href="html/listado-pacientes.html"><b>Listado pacientes</b></a></li><br>
+                <li><a href="html/exames-laboratorio.html"><b>Examenes de laboratorio</b></a></li><br>
             </ul>
         </main>
         <footer>
+            <img src="https://static.vecteezy.com/system/resources/previews/002/092/224/non_2x/health-care-symbol-two-snakes-and-a-rod-on-a-red-background-logo-for-the-pharmacy-flat-illustration-vector.jpg" width="10%">
+            <h2>Contactos:</h2>
+            <ul>
+                <li>Urgencias: 601 424620</li>
+                <li>Telefono: 601 2930822</li>
+                <li>Telefono Nacional: 01 8000 2200</li>
+                <li>Correo electronico: centroMedicoUniversitarioDistrital@cmud.com.co  </li>
+                <li>Sede principal: Calle28 #5-26</li>
+                <li>Violencia sexual: +57 306 765 4334</li>
+            </ul>
             <h2>Realizado por:</h2>
             <p>Grupo 1 desarrollo web backend</p>
+
         </footer>
     </div>
 </body>
