--- a/html/exames-laboratorio.html
+++ b/html/exames-laboratorio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro pacientes</title>
+    <title>examenes laboratorio</title>
     <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
@@ -14,20 +14,17 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/71/Bogot%C3%A1_edificio_Hospital_San_Jos%C3%A9_en_la_plaza_Espa%C3%B1a.JPG/320px-Bogot%C3%A1_edificio_Hospital_San_Jos%C3%A9_en_la_plaza_Espa%C3%B1a.JPG" width="600px" height="200px">
     </header>
     <main>
-        <h2>Registro pacientes</h2>
+        <h2>examenes de laboratorio</h2>
         <div class="container-form">
-            <form id="registro-pacientes-form">
-            <label for="nombres">Nombres:</label>
-            <input type="text" id="nombres" name="nombres" required>
-            <label for="apellidos">Apellidos:</label>
-            <input type="text" id="apellidos" name="apellidos" required>
+            <label for="orden">Numero de orden</label>
+            <input type="number" id="orden" name="orden" required>
+            <label for="nombreCompleto">Nombres y apellidos:</label>
+            <input type="text" id="nombreCompleto" name="nombreCompleto" required>
             <label for="cedula">Número de cedula:</label>
             <input type="number" id="cedula" name="cedula" required>
-            <label for="edad">Edad:</label>
-            <input type="number" id="edad" name="edad" required>
-            <label for="telefono">Telefono:</label>
-            <input type="tel" name="telefono" id="telefono" required>
-            <label for="especialidad">Especialidad requerida:</label>
+            <label for="nombreMedico">Medico a cargo:</label>
+            <input type="text" id="nombreMedico" name="nombreMedico" required>
+            <label for="especialidad">Especialidad del medico que ordeno los examenes:</label>
             <select name="especialidad" id="especialidad" required>
                 <option value="">----------Seleccione una opcion-----------</option>
                 <option value="Medicina general">Medicina general</option>
@@ -39,22 +36,34 @@
                 <option value="Odontología">Odontología</option>
                 <option value="Radiología">Radiología</option>
             </select>
+            <label for="telefono">Telefono:</label>
+            <input type="tel" name="telefono" id="telefono" required>
+            <label for="correo">Correo (para entrega de los resultados)</label>
+            <input type="text" id="correo" name="correo" required>
+            <label for="examenesPaciente">Examenes solicitados:</label>
+            <select name="especialidad" id="especialidad" required>
+                <option value="">----------Seleccione una opcion-----------</option>
+                <option value="parcialDeOrina">Parcial de orina</option>
+                <option value="citologia">Citologia</option>
+                <option value="coprologico">Coprologico</option>
+            </select>
+            
             <input type="submit" value="Enviar">
-        </form>
+            </tbody>
+        </table>
         <a href="../index.html"><input type="button" value="Volver"></a>
-        </div>
     </main>
     <footer>
         <img src="https://static.vecteezy.com/system/resources/previews/002/092/224/non_2x/health-care-symbol-two-snakes-and-a-rod-on-a-red-background-logo-for-the-pharmacy-flat-illustration-vector.jpg" width="10%">
-            <h2>Contactos:</h2>
-            <ul>
-                <li>Urgencias: 601 424620</li>
-                <li>Telefono: 601 2930822</li>
-                <li>Telefono Nacional: 01 8000 2200</li>
-                <li>Correo electronico: centroMedicoUniversitarioDistrital@cmud.com.co</li>
-                <li>Sede principal: Calle28 #5-26</li>
-                <li>Violencia sexual: +57 306 765 4334</li>
-            </ul>
+        <h2>Contactos:</h2>
+        <ul>
+            <li>Urgencias: 601 424620</li>
+            <li>Telefono: 601 2930822</li>
+            <li>Telefono Nacional: 01 8000 2200</li>
+            <li>Correo electronico: centroMedicoUniversitarioDistrital@cmud.com.co </li>
+            <li>Sede principal: Calle28 #5-26</li>
+            <li>Violencia sexual: +57 306 765 4334</li>
+        </ul>
         <h2>Realizado por:</h2>
         <p>Grupo 1 desarrollo web backend</p>
     </footer>
